--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
                         <span>17+ years</span>
                     </div>
                     <div class="counter-controls">
-                        <button class="btn btn--decrement btn-adult-decrement btn--cta" data-src="1">-</button>
-                        <span class="counter-value counter-value--1" id="adultsCount">0</span>
-                        <button class="btn btn--increment btn-adult-increment btn--cta" data-src="1">+</button>
+                        <button class="btn btn--decrement btn-adult-decrement btn--cta" data-src="adult">-</button>
+                        <span class="counter-value counter-value--adult" id="adultsCount">0</span>
+                        <button class="btn btn--increment btn-adult-increment btn--cta" data-src="adult">+</button>
                     </div>
                 </div>
                 <div class="counter-item">
@@ -63,9 +63,9 @@
                         <span>3-16 years</span>
                     </div>
                     <div class="counter-controls">
-                        <button class="btn btn--decrement btn-children-decrement btn--cta" data-src="2">-</button>
-                        <span class="counter-value counter-value--2" id="childrenCount">0</span>
-                        <button class="btn btn--increment btn-children-increment btn--cta" data-src="2">+</button>
+                        <button class="btn btn--decrement btn-children-decrement btn--cta" data-src="children">-</button>
+                        <span class="counter-value counter-value--children" id="childrenCount">0</span>
+                        <button class="btn btn--increment btn-children-increment btn--cta" data-src="children">+</button>
                     </div>
                 </div>
                 <div class="counter-item">
@@ -74,9 +74,9 @@
                         <span>0-2 years</span>
                     </div>
                     <div class="counter-controls">
-                        <button class="btn btn--decrement btn-babies-decrement btn--cta" data-src="3">-</button>
-                        <span class="counter-value counter-value--3" id="babiesCount">0</span>
-                        <button class="btn btn--increment btn-babies-increment btn--cta" data-src="3">+</button>
+                        <button class="btn btn--decrement btn-babies-decrement btn--cta" data-src="babies">-</button>
+                        <span class="counter-value counter-value--babies" id="babiesCount">0</span>
+                        <button class="btn btn--increment btn-babies-increment btn--cta" data-src="babies">+</button>
                     </div>
                 </div>
             </div>
