--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="current-form.css">
-  <script defer src="/current-form.js"></script>
+  <script defer src="current-form.js"></script>
   <title>Document</title>
 </head>
 <body>
@@ -13,7 +13,7 @@
   <div id="booking_form_placeholder" class="booking-container" >
 
     <div class="booking_close_container">
-      <img src="/CPM_RGB_ES_Camping_Outline.svg" alt="Logo">
+      <img src="CPM_RGB_ES_Camping_Outline.svg" alt="Logo">
       <button class="btn btn--close">&#xd7;</button>
     </div>
 
